--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "sen4az",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "\"# project-lvl1-s204\"",
 	"main": "index.js",
 	"scripts": {
 		"babel-node": "babel-node",
 		"build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-		"prepublish": "npm run build"
+		"prepublish": "npm run build",
+		"eslint": "eslint"
 	},
 	"bin": {
 		"brain-games": "dist/bin/brain-games.js"
@@ -16,8 +17,12 @@
 	"devDependencies": {
 		"babel-cli": "*",
 		"babel-core": "*",
+		"babel-eslint": "^8.0.1",
 		"babel-preset-env": "*",
-		"babel-preset-stage-0": "*"
+		"babel-preset-stage-0": "*",
+		"eslint": "^4.10.0",
+		"eslint-config-airbnb-base": "^12.1.0",
+		"eslint-plugin-import": "^2.8.0"
 	},
 	"dependencies": {
 		"readline-sync": "^1.4.7"
