--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "sen4az",
 	"version": "0.0.2",
 	"description": "\"# project-lvl1-s204\"",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"babel-node": "babel-node",
 		"build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
