--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"eslint": "eslint"
 	},
 	"bin": {
-		"brain-games": "dist/bin/brain-games.js"
+		"brain-games": "dist/bin/brain-games.js",
+		"brain-even": "dist/bin/brain-even.js"
 	},
 	"author": "Semen Zadorozhniy",
 	"license": "ISC",
